--- a/kubernetes-templates/cachet/0/rancher-compose.yml
+++ b/kubernetes-templates/cachet/0/rancher-compose.yml
@@ -45,7 +45,7 @@
 
     - variable: MYSQL_PORT
       default: 3306
-      label: MySQL Password
+      label: MySQL Port
       required: true
       type: int
 
